
nobase_webroot_DATA = \
  app.templates.html \
  js/jsrender.js \
  js/jquery.js \
  js/jswt/jswt.table.js \
  js/jswt/jswt.panel.js \
  js/jswt/jswt-dashboard.js \
  js/jswt/jswt.tree.js \
  js/jswt/jswt.chart_line.js \
  js/jswt/jswt.properties.js \
  js/jswt/jswt.base.js \
  js/jswt/jswt.templates.html \
  js/jswt/jswt.tab.js \
  js/d3.min.js \
  js/idgs.cluster.js \
  js/jquery.flot.resize.js \
  js/bootbox.js \
  js/dagre-d3.min.js \
  js/dagre.min.js \
  js/jquery.autosize.min.js \
  js/idgs.base.js \
  js/idgs.dag.js \
  js/bootstrap-treeview.js \
  js/idgs.store.js \
  js/app.js \
  js/jquery.flot.time.js \
  js/bootstrap.js \
  js/jquery.autosize.js \
  js/jquery.flot.js \
  favicon.ico \
  index.html \
  images/bg.png \
  images/bg_2.png \
  images/bg_5.png \
  images/bg_4.png \
  images/bg_3.png \
  fonts/glyphicons-halflings-regular.eot \
  fonts/fontawesome-webfont.woff \
  fonts/fontawesome-webfont.eot \
  fonts/fontawesome-webfont.ttf \
  fonts/fontawesome-webfont.svg \
  fonts/glyphicons-halflings-regular.svg \
  fonts/clip-font.svg \
  fonts/glyphicons-halflings-regular.woff \
  fonts/FontAwesome.otf \
  fonts/clip-font.ttf \
  fonts/clip-font.woff \
  fonts/glyphicons-halflings-regular.ttf \
  fonts/clip-font.eot \
  css/main-responsive.css \
  css/font-awesome.css \
  css/font-clip.css \
  css/ui.fancytree.css \
  css/theme_light.css \
  css/main.css \
  css/dashboard.css \
  css/bootstrap.css 

