JARFILES = \
  target/idgs-sql-0.1.0-release/javalib/antlr-2.7.7.jar \
  target/idgs-sql-0.1.0-release/javalib/idgs-sql-0.1.0.jar \
  target/idgs-sql-0.1.0-release/javalib/commons-el-1.0.jar \
  target/idgs-sql-0.1.0-release/javalib/commons-logging-api-1.0.4.jar \
  target/idgs-sql-0.1.0-release/javalib/mockito-all-1.8.2.jar \
  target/idgs-sql-0.1.0-release/javalib/stax-api-1.0-2.jar \
  target/idgs-sql-0.1.0-release/javalib/libthrift-0.9.0.jar \
  target/idgs-sql-0.1.0-release/javalib/protobuf-java-format-1.2.jar \
  target/idgs-sql-0.1.0-release/javalib/jaxb-api-2.2.2.jar \
  target/idgs-sql-0.1.0-release/javalib/hsqldb-1.8.0.10.jar \
  target/idgs-sql-0.1.0-release/javalib/asm-3.1.jar \
  target/idgs-sql-0.1.0-release/javalib/log4j-1.2.17.jar \
  target/idgs-sql-0.1.0-release/javalib/avro-ipc-1.7.1.jar \
  target/idgs-sql-0.1.0-release/javalib/datanucleus-connectionpool-2.0.3.jar \
  target/idgs-sql-0.1.0-release/javalib/avro-mapred-1.7.1.jar \
  target/idgs-sql-0.1.0-release/javalib/derby-10.4.2.0.jar \
  target/idgs-sql-0.1.0-release/javalib/commons-lang-2.4.jar \
  target/idgs-sql-0.1.0-release/javalib/commons-codec-1.4.jar \
  target/idgs-sql-0.1.0-release/javalib/libfb303-0.9.0.jar \
  target/idgs-sql-0.1.0-release/javalib/hadoop-core-1.2.1.jar \
  target/idgs-sql-0.1.0-release/javalib/jersey-server-1.8.jar \
  target/idgs-sql-0.1.0-release/javalib/ST4-4.0.4.jar \
  target/idgs-sql-0.1.0-release/javalib/jackson-mapper-asl-1.8.8.jar \
  target/idgs-sql-0.1.0-release/javalib/jetty-util-6.1.26.jar \
  target/idgs-sql-0.1.0-release/javalib/netty-3.4.0.Final.jar \
  target/idgs-sql-0.1.0-release/javalib/ant-1.6.5.jar \
  target/idgs-sql-0.1.0-release/javalib/paranamer-2.3.jar \
  target/idgs-sql-0.1.0-release/javalib/protobuf-java-2.6.1.jar \
  target/idgs-sql-0.1.0-release/javalib/jta-1.1.jar \
  target/idgs-sql-0.1.0-release/javalib/commons-compress-1.4.1.jar \
  target/idgs-sql-0.1.0-release/javalib/hive-cli-0.11.0.jar \
  target/idgs-sql-0.1.0-release/javalib/junit-3.8.1.jar \
  target/idgs-sql-0.1.0-release/javalib/jackson-core-asl-1.7.1.jar \
  target/idgs-sql-0.1.0-release/javalib/jersey-core-1.8.jar \
  target/idgs-sql-0.1.0-release/javalib/commons-cli-1.2.jar \
  target/idgs-sql-0.1.0-release/javalib/commons-dbcp-1.4.jar \
  target/idgs-sql-0.1.0-release/javalib/antlr-runtime-3.4.jar \
  target/idgs-sql-0.1.0-release/javalib/slf4j-api-1.6.1.jar \
  target/idgs-sql-0.1.0-release/javalib/JavaEWAH-0.3.2.jar \
  target/idgs-sql-0.1.0-release/javalib/jets3t-0.6.1.jar \
  target/idgs-sql-0.1.0-release/javalib/commons-logging-1.1.3.jar \
  target/idgs-sql-0.1.0-release/javalib/commons-io-2.1.jar \
  target/idgs-sql-0.1.0-release/javalib/hive-service-0.11.0.jar \
  target/idgs-sql-0.1.0-release/javalib/commons-pool-1.5.4.jar \
  target/idgs-sql-0.1.0-release/javalib/datanucleus-enhancer-2.0.3.jar \
  target/idgs-sql-0.1.0-release/javalib/jersey-json-1.8.jar \
  target/idgs-sql-0.1.0-release/javalib/commons-collections-3.2.1.jar \
  target/idgs-sql-0.1.0-release/javalib/servlet-api-2.5-20081211.jar \
  target/idgs-sql-0.1.0-release/javalib/idgs-java-0.1.0.jar \
  target/idgs-sql-0.1.0-release/javalib/javolution-5.5.1.jar \
  target/idgs-sql-0.1.0-release/javalib/netty-3.2.2.Final.jar \
  target/idgs-sql-0.1.0-release/javalib/hive-exec-0.11.0.jar \
  target/idgs-sql-0.1.0-release/javalib/commons-math-2.1.jar \
  target/idgs-sql-0.1.0-release/javalib/stax-api-1.0.1.jar \
  target/idgs-sql-0.1.0-release/javalib/oro-2.0.8.jar \
  target/idgs-sql-0.1.0-release/javalib/xz-1.0.jar \
  target/idgs-sql-0.1.0-release/javalib/commons-httpclient-3.0.1.jar \
  target/idgs-sql-0.1.0-release/javalib/jsr305-1.3.9.jar \
  target/idgs-sql-0.1.0-release/javalib/guava-11.0.2.jar \
  target/idgs-sql-0.1.0-release/javalib/snappy-0.2.jar \
  target/idgs-sql-0.1.0-release/javalib/jasper-compiler-5.5.12.jar \
  target/idgs-sql-0.1.0-release/javalib/commons-beanutils-1.7.0.jar \
  target/idgs-sql-0.1.0-release/javalib/xmlenc-0.52.jar \
  target/idgs-sql-0.1.0-release/javalib/hive-common-0.11.0.jar \
  target/idgs-sql-0.1.0-release/javalib/datanucleus-core-2.0.3.jar \
  target/idgs-sql-0.1.0-release/javalib/slf4j-log4j12-1.6.1.jar \
  target/idgs-sql-0.1.0-release/javalib/jetty-6.1.26.jar \
  target/idgs-sql-0.1.0-release/javalib/jline-0.9.94.jar \
  target/idgs-sql-0.1.0-release/javalib/hive-jdbc-0.11.0.jar \
  target/idgs-sql-0.1.0-release/javalib/jsp-api-2.1-6.1.14.jar \
  target/idgs-sql-0.1.0-release/javalib/jettison-1.1.jar \
  target/idgs-sql-0.1.0-release/javalib/commons-configuration-1.6.jar \
  target/idgs-sql-0.1.0-release/javalib/commons-digester-1.8.jar \
  target/idgs-sql-0.1.0-release/javalib/antlr-3.4.jar \
  target/idgs-sql-0.1.0-release/javalib/stringtemplate-3.2.1.jar \
  target/idgs-sql-0.1.0-release/javalib/jdo2-api-2.3-ec.jar \
  target/idgs-sql-0.1.0-release/javalib/httpclient-4.1.3.jar \
  target/idgs-sql-0.1.0-release/javalib/guava-jdk5-14.0.1.jar \
  target/idgs-sql-0.1.0-release/javalib/zookeeper-3.4.3.jar \
  target/idgs-sql-0.1.0-release/javalib/velocity-1.7.jar \
  target/idgs-sql-0.1.0-release/javalib/jackson-xc-1.7.1.jar \
  target/idgs-sql-0.1.0-release/javalib/jsp-2.1-6.1.14.jar \
  target/idgs-sql-0.1.0-release/javalib/idgs-jdbc-0.1.0.jar \
  target/idgs-sql-0.1.0-release/javalib/hive-shims-0.11.0.jar \
  target/idgs-sql-0.1.0-release/javalib/core-3.1.1.jar \
  target/idgs-sql-0.1.0-release/javalib/activation-1.1.jar \
  target/idgs-sql-0.1.0-release/javalib/json-20090211.jar \
  target/idgs-sql-0.1.0-release/javalib/snappy-java-1.0.4.1.jar \
  target/idgs-sql-0.1.0-release/javalib/jaxb-impl-2.2.3-1.jar \
  target/idgs-sql-0.1.0-release/javalib/commons-net-1.4.1.jar \
  target/idgs-sql-0.1.0-release/javalib/httpcore-4.1.3.jar \
  target/idgs-sql-0.1.0-release/javalib/datanucleus-rdbms-2.0.3.jar \
  target/idgs-sql-0.1.0-release/javalib/hive-metastore-0.11.0.jar \
  target/idgs-sql-0.1.0-release/javalib/servlet-api-2.5-6.1.14.jar \
  target/idgs-sql-0.1.0-release/javalib/hive-serde-0.11.0.jar \
  target/idgs-sql-0.1.0-release/javalib/jasper-runtime-5.5.12.jar \
  target/idgs-sql-0.1.0-release/javalib/commons-beanutils-core-1.8.0.jar \
  target/idgs-sql-0.1.0-release/javalib/jackson-jaxrs-1.7.1.jar \
  target/idgs-sql-0.1.0-release/javalib/avro-1.7.1.jar 

javalib_DATA = $(JARFILES)

$(JARFILES):
	mvn  -f @srcdir@/pom.xml install -Dmaven.test.skip=true;

bin_SCRIPTS =         src/main/scripts/idgs-sql-cli.sh         src/main/scripts/idgs-sql-cli.cmd

